# Pablo

./: .gitignore  comments.csv  creators.csv  likes.csv  pyproject.toml  requirements.txt  set_db.py  test.py  test2.py  users.csv  works.csv
.github/: CODEOWNERS
pablo_app/: __init__.py  app.py
pablo_app/static/css/: style.css  style_comment.css  style_description.css  style_signup.css  style_work_description.css
pablo_app/static/js/: index.js
pablo_app/templates/: comment.html  description.html  index.html  login.html  registration.html  signup.html  work-and-description.html
