[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
aniso8601 = "9.0.1"
attrs = "23.1.0"
blinker = "1.7.0"
click = "8.1.7"
colorama = "0.4.6"
flask = "2.3.3"
flask-restx = "1.2.0"
flask-sqlalchemy = "3.1.1"
greenlet = "3.0.1"
importlib-metadata = "6.8.0"
importlib-resources = "6.1.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
markupsafe = "2.1.3"
pkgutil-resolve-name = "1.3.10"
pyrsistent = "0.20.0"
pytz = "2023.3.post1"
sqlalchemy = "2.0.23"
typing-extensions = "4.8.0"
werkzeug = "2.3.8"
zipp = "3.17.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"